# kalshi-tui

./: .gitignore  Cargo.toml  EXPLAINER.md  README.md  REFACTOR_SPEC.md  SESSION.md  SESSION_2026-04-29_153030.md  SESSION_2026-04-29_232050.md  SESSION_2026-04-29_235021.md  SESSION_2026-05-02_205603.md  SESSION_2026-05-02_213444.md  SESSION_2026-05-02_213610.md  SESSION_LOG.md  SESSION_LOG_2026-04-13_083437.md  SESSION_LOG_2026-04-13_163217.md  SESSION_LOG_2026-04-13_164500.md  SESSION_RETROSPECTIVE.md  STATUS.md  join_settlements.py  patch_region.py  test_phaseA.py  test_reconciliation.py  test_same_side_dedup.py  trend_gate.py
diagrams/: 01_system_architecture.dot  02_per_run_pipeline.dot  03_failure_modes.dot  04_why_it_works.dot  05_phaseA_gate_flow.dot  06_conviction_regions.dot  07_netting_state_machine.dot  08_expiry_cap_budget.dot  09_phaseB_data_flow.dot  10_module_dependencies.dot  11_db_schema.dot  12_config_layering.dot  13_trade_lifecycle.dot  14_testing_strategy.dot  15_ensemble_routing.dot  16_training_pipeline.dot  17_incident_anatomy.dot  18_portfolio_states.dot  19_safety_layers.dot  20_kalshi_api_flow.dot  21_streak_breaker_flow.dot  22_evening_timeline_counterfactual.dot  README.md
docs/: session_20260430_000203.md
recalibration/: band_weighted_results.json  eval_per_side.py  eval_per_side_results.json  recalibrate_band_weighted.py  recalibrate_per_side.py  recalibration_results.json  train_and_eval_v2feats.py  v2feat_results.json
scripts/: auto_trader.py  classifier_device.py  fetch_historical_candles.py  investigate_recent.py  kalshi_client.py  (+6 more)
(+21 files in other folders)
