[package]
name = "kalshi_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kalshi-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
openssl = { version = "0.10", features = ["v102", "v110"] }
base64 = "0.22"
